[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/sprites/player/player_body_walk_1.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/player/head.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/player/player_body.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/player/hand.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/player/player_body_walk_2.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/guns/pistol_sprites/pistol1.png" type="Texture" id=6]
[ext_resource path="res://player.gd" type="Script" id=7]
[ext_resource path="res://assets/audio/pling2.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/audio/shoot.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/sprites/guns/pistol_sprites/pistol2.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/guns/pistol_sprites/pistol.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/guns/pistol_sprites/pistol3.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/guns/pistol_sprites/pistol4.png" type="Texture" id=13]
[ext_resource path="res://assets/audio/emptygun.wav" type="AudioStream" id=14]
[ext_resource path="res://assets/audio/pickUpBullets.wav" type="AudioStream" id=15]
[ext_resource path="res://assets/audio/player_hit.wav" type="AudioStream" id=16]
[ext_resource path="res://assets/audio/health.wav" type="AudioStream" id=17]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.0
height = 2.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "standing",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 5 ) ],
"loop": true,
"name": "walking",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 6 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 11 ) ],
"loop": false,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 8 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 1 )

[node name="Body" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "standing"
playing = true

[node name="Head" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Gun" type="AnimatedSprite" parent="."]
position = Vector2( 11, 1 )
frames = SubResource( 3 )
frame = 5
playing = true

[node name="Hand" type="Sprite" parent="Gun"]
position = Vector2( -4, 1 )
texture = ExtResource( 4 )

[node name="Player" type="Area2D" parent="."]
collision_layer = 13
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 4 )

[node name="Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="shoot_cooldown" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="EmptyGunsound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )

[node name="ReloadSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )

[node name="PlayerHitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 16 )

[node name="EyeDamageCooldown" type="Timer" parent="."]
wait_time = 0.226

[node name="HealthPickUp" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 17 )
[connection signal="area_entered" from="Player" to="." method="_on_Player_area_entered"]
[connection signal="area_exited" from="Player" to="." method="_on_Player_area_exited"]
[connection signal="timeout" from="shoot_cooldown" to="." method="_on_shoot_cooldown_timeout"]
[connection signal="timeout" from="EyeDamageCooldown" to="." method="_on_EyeDamageCooldown_timeout"]
